Fix instance restore detect logic
